# stock_widget

./: CMakeLists.txt  CMakePresets.json  README.md  build.sh
app/: App.cpp  App.hpp  CMakeLists.txt  Cognito_auth.cpp  Cognito_srp.cpp  ControlPanel.cpp  ControlPanel.hpp  DataFound.cpp  DataFound.hpp  DataGetter.cpp  DataGetter.hpp  LoginPanel.cpp  LoginPanel.hpp  Window.cpp  Window.hpp  backup_CMakeLists.txt  scratch.txt  tester.cpp  tester.hpp
